--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     // Google's Gson
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
