--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //Anko
+    implementation 'org.jetbrains.anko:anko-sqlite:0.10.8'
 }
