--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".NewsDetails"
+                android:name=".Views.NewsDetails"
                 android:label="@string/title_activity_news_details"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
